NetBSD Problem Report #50751

From www@NetBSD.org  Tue Feb  2 10:44:28 2016
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.NetBSD.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 0DCCF7A0EB
	for <gnats-bugs@gnats.NetBSD.org>; Tue,  2 Feb 2016 10:44:28 +0000 (UTC)
Message-Id: <20160202104427.362F07AC9C@mollari.NetBSD.org>
Date: Tue,  2 Feb 2016 10:44:27 +0000 (UTC)
From: dcb314@hotmail.com
Reply-To: dcb314@hotmail.com
To: gnats-bugs@NetBSD.org
Subject: [src/usr.sbin/syslogd/tls.c:1594]: (style) Array index 'offset' is used before limits check.
X-Send-Pr-Version: www-1.0

>Number:         50751
>Category:       bin
>Synopsis:       [src/usr.sbin/syslogd/tls.c:1594]: (style) Array index 'offset' is used before limits check.
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    bin-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Tue Feb 02 10:45:00 +0000 2016
>Closed-Date:    Wed Feb 03 08:19:01 +0000 2016
>Last-Modified:  Wed Feb 03 08:19:01 +0000 2016
>Originator:     David Binderman
>Release:        cvs dated 20160131
>Organization:
>Environment:
>Description:
Source code is


    while (isdigit((unsigned char)c->inbuf[offset])
        && offset < c->read_pos) {

Maybe

    while ((offset < c->read_pos)
        && isdigit((unsigned char)c->inbuf[offset])) {


might be better code.


>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:
From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/50751 CVS commit: src/usr.sbin/syslogd
Date: Wed, 3 Feb 2016 00:34:21 -0500

 Module Name:	src
 Committed By:	christos
 Date:		Wed Feb  3 05:34:21 UTC 2016

 Modified Files:
 	src/usr.sbin/syslogd: tls.c

 Log Message:
 PR/50751: David Binderman: check bounds before dereferencing.


 To generate a diff of this commit:
 cvs rdiff -u -r1.11 -r1.12 src/usr.sbin/syslogd/tls.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: wiz@NetBSD.org
State-Changed-When: Wed, 03 Feb 2016 08:19:01 +0000
State-Changed-Why:
Fixed by christos, thanks!


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.