PR/50751: David Binderman: check bounds before dereferencing.